# wordnetplugin

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
examples/: 01-antonyms-nonword.hex  01-antonyms.hex  02-hypernyms.hex  03-hyponyms.hex  04-entailment.hex  05-similar.hex  06-holonyms_member.hex  07-holonyms_substance.hex  08-holonyms_part.hex  09-meronyms_member.hex  10-meronyms_substance.hex  11-meronyms_part.hex  14-causeto.hex  15-participleofverb.hex  18-attribute.hex  20-derivations.hex  23-synonyms.hex  38-instanceof.hex  39-instances.hex  Makefile.am  baseforms.hex  relative_via_holonym.hex  relative_via_hypernym.hex
examples/tests/: 01-antonyms-nonword.out  01-antonyms.out  02-hypernyms.out  03-hyponyms.out  04-entailment.out  05-similar.out  06-holonyms_member.out  07-holonyms_substance.out  08-holonyms_part.out  09-meronyms_member.out  10-meronyms_substance.out  11-meronyms_part.out  14-causeto.out  18-attribute.out  20-derivations.out  23-synonyms.out  38-instanceof.out  39-instances.out  baseforms.out  cautiously_true.stdout  relative_via_hypernym.out  run-dlvhex-tests.sh  wordnetplugintests.test
include/: BaseForms.h  Baseforms.h  Makefile.am  Profile.h  WordRequest.h  WordnetAtom.h  WordnetPlugin.h  Wordrequest.h
include/impl/: Makefile.am  baseforms.h  util.h  wordrequest.h
src/: BaseForms.cpp  Baseforms.cpp  Makefile.am  Util.cpp  WordRequest.cpp  WordnetAtom.cpp  WordnetPlugin.cpp  Wordrequest.cpp
src/impl/: Makefile.am  baseforms.cpp  util.cpp  wordnetplugin.cpp  wordrequest.cpp
src/test/: testBaseForms.cpp  testWordRequest.cpp
